# ProofBench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beryl/: beryl.components.json
.beryl/agent/: README.md  affected-tests.conf  agent-rules.md  architecture.md  design-tree.md  mcp.json  module-routing.md  project-brief.md  security-policy.md  task-routing.md  test-manifest.conf  testing-policy.md  ubiquitous-language.md
.beryl/driver/: .gitignore  README.md  config.example.env  import-github-issues.sh  run.sh
.beryl/githooks/: pre-commit
.beryl/scripts/: README.md  beryl-components.sh  check-affected.sh  check-md.sh  check-project.sh  check-secrets.sh  check-tests-unchanged.sh  check.sh  paths.sh  safe-conf.sh  setup-project.sh  test-manifest-lib.sh  update-test-manifest.sh  validate-components.sh
.codex/: AGENTS.md
.github/: copilot-instructions.md
.github/workflows/: deterministic-checks.yml
docs/: README.md  benchmark_protocol.md  building_agents.md  research_basis.md
proofbench/: README.md  __init__.py  cli.py  config.py  preflight.py
proofbench/agents/: README.md  base.py  graph_of_thoughts.py  lats.py  llm_baseline.py  moe_fused.py  react_agent.py  registry.py  router.py  search_common.py  self_consistency.py  (+1 more)
scripts/: README.md  clean_runs.sh  preflight.sh  run_full_comparison.sh
tests/: .manifest.sha256  README.md  __init__.py  test_cli.py  test_dashboard.py  test_evaluation_metrics.py  test_excel_export.py  test_lean_verifier.py  test_minif2f_parser.py  test_moe_fused.py  test_preflight.py  test_reverify.py  test_search_agents.py
(+63 files in other folders)
